# card-trader

./: app.json  package-lock.json  package.json
app/: .eslintrc.js  .prettierrc.js  App.tsx  CardDetails.tsx  package-lock.json  package.json
app/android/: build.gradle
app/android/app/: build.gradle
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/java/com/app/: MainActivity.java
app/assets/: AttLvl1.tsx  AttLvl30.tsx  AttLvl40.tsx  AttLvl50.tsx  AttLvl70.tsx  AttLvl90.tsx  DefLvl30.tsx  StrLvl1.tsx
app/ios/app/: Info.plist
app/ios/app.xcodeproj/: project.pbxproj
app/navigation/: types.tsx
app/screens/: BattleScreen.tsx  CameraScreen.tsx  CardScreen.tsx  CodeInput.tsx  CollectionScreen.tsx  EulaScreen.tsx  LoadingDots.tsx  LoginScreen.tsx  RegistrationScreen.tsx  ShopScreen.tsx  TrainingScreen.tsx
mobile/: App.tsx  CardDetails.tsx  Types.ts  app.json  package.json  routing.ts
mobile/assets/: AttLvl10.tsx  AttLvl20.tsx  DefLvl1.tsx  DefLvl10.tsx  DefLvl20.tsx  DefLvl50.tsx  HpLvl1.tsx  HpLvl99.tsx  StrLvl10.tsx  StrLvl30.tsx  StrLvl70.tsx  StrLvl90.tsx
mobile/screens/: BattleScreen.tsx  CameraScreen.tsx  CardScreen.tsx  CollectionScreen.tsx  ShopScreen.tsx  TrainingScreen.tsx
server/: .gitignore  Cargo.toml
server/src/: lib.rs  main.rs
server/src/db/: dbcard.rs  dbplayer.rs  mod.rs
server/src/extractors/: authentication_token.rs
server/src/gql/: mod.rs  schema_resolver.rs
server/src/handlers/: authenticationhandler.rs  cardhandler.rs  mod.rs  playerhandler.rs
server/src/model/: ability.rs  battle.rs  card.rs  market.rs  mod.rs  modelcard.rs  modelcardholder.rs  player.rs
web/: package-lock.json  package.json
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/battle/: +page.svelte
web/src/routes/cards/: +page.js
web/src/routes/cards/[slug]/: +page.js  +page.svelte
web/src/routes/login/: +page.server.js  +page.server.ts  +page.svelte
web/src/routes/players/: +page.svelte
web/src/routes/registration/: +page.server.ts  +page.svelte
