[package]
name = "succ_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-rt = "2.8.0"
actix-test = "0.1.1"
actix-web = { version = "4.3.1", features = ["openssl"] }
argon2 = "0.5.0"
chrono = { version = "0.4.24", features = ["serde"] }
env_logger = "0.10.0"
futures = "0.3.28"
imageproc = "0.23.0"
mongodb = "2.5.0"
openssl = "0.10.52"
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
serde-helpers = "0.1.0"
serde_json = "1.0.96"
serde_with = "3.0.0"
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "macro-diagnostics"] } 
